update home template

--- a/afs/templates/index.htm
+++ b/afs/templates/index.htm
@@ -70,16 +70,17 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <img class="navbar-brand-v5-icon" style="margin-top: -2px;" src="{% static 'img/landing/arches_logo_dark.png' %}" alt="Arches Logo">
                         </div>
                         <div class="application-name" style="position: absolute; top: 5px; left: 150px;">
-                            <h2 style="color: #f4f4f4;">{% trans "Arches/DISCO" %}</h2>
+                            <h2 style="color: #f4f4f4;">{% trans " DISCO v0.9" %}</h2>
                         </div>
                     </div>
                 </div>
 
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
-                        <li>
+                        <!--<li>
                             <a href="#info-block-1">{% trans "Arches Features" %}</a>
                         </li>
+                    	-->
 
                         <li>
                             <a href="{% url 'search_home' %}">{% trans "Search" %}</a>
@@ -115,7 +116,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
     <!-- Intro Section -->
     <section id="info-block-0" class="app-info-block intro-section relative">
-        <!-- Vertical Nav -->
+        <!-- Vertical Nav 
         <div class="vertical-nav-container-background"></div>
 
         <div id="cd-vertical-nav" class="vertical-nav-container">
@@ -146,7 +147,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     </a>
                 </li>
             </ul>
-        </div>
+        </div>-->
 
         <!-- Splash Screen -->
         <div class="fullscreenbanner-container">
@@ -159,14 +160,14 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                         <!-- LAYERS -->
                         <!-- NEW LAYER -->
-                        <div class="tp-caption sft start text-bold v5-splash-caption" style="left: 150px;" delay="4500"  data-hoffset="0" data-y="400" data-speed="800" data-start="100" data-easing="Back.easeInOut" data-endspeed="300">
-                            <h2>{% trans "Arches for Science" %}</h2>
-                            <p>{% trans "A web and mobile platform for" %}</p>
-                            <p>{% trans "managing your most important conservation information" %}</p>
+                        <div class="tp-caption sft start text-bold v5-splash-caption" style="left: 150px; background: rgba(0, 0, 0, 0.5);" delay="4500"  data-hoffset="0" data-y="400" data-speed="800" data-start="100" data-easing="Back.easeInOut" data-endspeed="300">
+                            <h2>{% trans "DISCO" %}</h2>
+                            <p style="padding-bottom: 15px;">{% trans "(Data Integration for Conservation Science)" %}</p>
+                            <p>{% trans "The Getty Conservation Institute's implementation of Arches for Science" %}</p>
                         </div>
 
-                        <!-- Gradient -->
-                        <div class="image-gradient"></div>
+                        <!-- Gradient 
+                        <div class="image-gradient"></div>-->
 
                         <!-- Attribution -->
                         <div class="image-attribution">
@@ -178,19 +179,19 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 <div class="tp-bannertimer tp-bottom"></div>
             </div>
 
-            <!-- Down button -->
+            <!-- Down button 
             <div class="down-button">
                 <a href="#info-block-1"><i class="fa fa-angle-down down-button-icon"></i></a>
             </div>
-        </div>
+        </div>-->
     </section>
     <!-- End Intro Section -->
 
-    <!-- Info Block 1 -->
+    <!-- Info Block 1 
     <section id="info-block-1" class="app-info-block relative">
-        <div>
+        <div>-->
 
-            <!-- Heading Info -->
+            <!-- Heading Info 
             <div class="sub-section">
                 <div class="col-lg-7">
                     <div class="app-info-block-intro text-center">
@@ -201,17 +202,17 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         </p>
                     </div>
                 </div>
-            </div>
+            </div>-->
 
-            <!-- Content -->
+            <!-- Content 
             <div class="splash-img">
                 <img src="{% static 'img/landing/imac_designer.png' %}" alt="Arches Designer">
-            </div>
+            </div>-->
 
-            <!-- Sub-section -->
-            <div class="row app-info-sub-block">
+            <!-- Sub-section 
+            <div class="row app-info-sub-block">-->
 
-                <!-- Arches Data Type Block -->
+                <!-- Arches Data Type Block 
                 <div class="col-lg-6">
                     <div class="sub-block-container">
                         <h2>{% trans "Interface Manager" %}</h2>
@@ -220,9 +221,9 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         </p>
                         <img class="sub-block-image" src="{% static 'img/landing/card_manager.png' %}" alt="Card Manager">
                     </div>
-                </div>
+                </div>-->
 
-                <!-- Arches Data Type Block -->
+                <!-- Arches Data Type Block 
                 <div class="col-lg-6">
                     <div class="sub-block-container">
                         <h2>{% trans "Data Security" %}</h2>
@@ -233,20 +234,20 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     </div>
                 </div>
 
-            </div>
-            <!-- End Sub-section -->
+            </div>-->
+            <!-- End Sub-section 
 
 
         </div>
-    </section>
+    </section>-->
     <!-- End Info Block 1 -->
 
 
-    <!-- Info Block 2 -->
+    <!-- Info Block 2 
     <section id="info-block-2" class="app-info-block relative">
-        <div>
+        <div>-->
 
-            <!-- Heading Info -->
+            <!-- Heading Info 
             <div class="sub-section">
                 <div class="col-lg-7">
                     <div class="app-info-block-intro text-center">
@@ -257,23 +258,23 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         </p>
                     </div>
                 </div>
-            </div>
+            </div>-->
 
-            <!-- Content -->
+            <!-- Content 
             <div class="splash-img">
                 <img class="search-screen" src="{% static 'img/landing/consultation_workflow.jpg' %}" alt="Arches Workflows">
             </div>
 
         </div>
-    </section>
+    </section>-->
     <!-- End Info Block 2 -->
 
 
-    <!-- Info Block 3 -->
+    <!-- Info Block 3 
     <section id="info-block-3" class="app-info-block relative">
-        <div>
+        <div>-->
 
-            <!-- Heading Info -->
+            <!-- Heading Info 
             <div class="sub-section">
                 <div class="col-lg-7">
                     <div class="app-info-block-intro text-center">
@@ -284,14 +285,14 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         </p>
                     </div>
                 </div>
-            </div>
+            </div>-->
 
-            <!-- Content -->
+            <!-- Content 
             <div class="splash-img">
                 <img class="search-screen" src="{% static 'img/landing/arches_search.png' %}" alt="Arches Search">
-            </div>
+            </div>-->
 
-            <!-- Sub-section -->
+            <!-- Sub-section 
             <div class="wide-box">
                 <div class="box-highlight">
                     <h3>{% trans "Search Options" %}</h3>
@@ -311,20 +312,20 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             </div>
 
         </div>
-    </section>
+    </section>-->
     <!-- End Info Block 3 -->
 
 
-    <!-- Info Block 4 -->
+    <!-- Info Block 4 
     <section id="info-block-4" class="app-info-block relative">
-        <div>
+        <div>-->
 
-            <!-- Heading Info -->
+            <!-- Heading Info 
             <div class="sub-section">
 
-            </div>
+            </div>-->
 
-            <!-- Content -->
+            <!-- Content 
             <div class="row">
                 <div class="col-md-6 col-lg-4">
                     <img class="iphone" src="{% static 'img/landing/iPhone_8_map.png' %}" alt="Arches Designer">
@@ -346,17 +347,17 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             </div>
         </div>
 
-    </section>
+    </section>-->
     <!-- End Info Block 4 -->
 
 
-    <!-- Footer -->
-    <div class="afs-app-footer">
+    <!-- Footer 
+    <div class="afs-app-footer">-->
 
-        <!-- footer content container -->
-        <div class="row">
+        <!-- footer content container 
+        <div class="row">-->
 
-            <!-- branding column -->
+            <!-- branding column 
             <div class="col-lg-4">
 
                 <h2 class="app-footer-heading">{% trans "Sample Institution Name" %}</h2>
@@ -367,13 +368,13 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                   1200 Getty Center Drive<br>
                   Los Angeles, CA  90049<br>
                 </div>
-            </div>
+            </div>-->
 
-            <!-- Info Column -->
+            <!-- Info Column 
             <div class="col-lg-8">
-                <h2 class="app-footer-heading">{% trans "Guides and Documentation" %}</h2>
+                <h2 class="app-footer-heading">{% trans "Guides and Documentation" %}</h2>-->
 
-                <!-- Links -->
+                <!-- Links 
                 <div class="afs-splash-links">
                     <div class="row" style="padding-left: 0px;">
                         <div class="col-lg-4">
@@ -428,18 +429,18 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- End Footer -->
 
-    <!-- Copyright Panel -->
-    <div class="copyright-container">
-        <!-- Arches link -->
+    <!-- Copyright Panel 
+    <div class="copyright-container">-->
+        <!-- Arches link 
         <div class="app-footer-links">
             <a class="link-spacing" href="">{% trans "Terms & Conditions" %}</a>
             <a class="link-spacing" href="">{% trans "Privacy Policy" %}</a>
             <a class="afs-app-footer-arches-link" href="http://www.archesproject.org" target="_blank">Powered by Arches</a>
         </div>
-    </div>
+    </div>-->
     <!-- End Copyright Container -->
 
 
