--- a/afs/templates/index.htm
+++ b/afs/templates/index.htm
@@ -15,6 +15,7 @@ GNU Affero General Public License for more details.
 You should have received a copy of the GNU Affero General Public License
 along with this program. If not, see <http://www.gnu.org/licenses/>.
 -->
+{% load webpack_static from webpack_loader %}
 {% load static %}
 {% load template_tags %}
 {% load i18n %}
@@ -34,15 +35,15 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <link rel="shortcut icon" href="{% static 'img/favicon.png' %}" />
+    <link rel="shortcut icon" href="{% webpack_static 'img/favicon.png' %}" />
 
     <link rel='stylesheet' type='text/css' href='//fonts.googleapis.com/css?family=Open+Sans:400,300,600&amp;subset=cyrillic,latin'>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/css/bootstrap.min.css">
 
-    <link href="{% static 'css/unify.css' %}" rel="stylesheet">
+    <link href="{% webpack_static 'css/unify.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
-    <link href="{% static 'css/index.css' %}" rel="stylesheet">
-    <link href="{% static 'css/project.css' %}" rel="stylesheet">
+    <link href="{% webpack_static 'css/index.css' %}" rel="stylesheet">
+    <link href="{% webpack_static 'css/project.css' %}" rel="stylesheet">
 
 </head>
 
@@ -67,7 +68,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                     <div class="relative" style="padding-left: 85px; width: 300px;">
                         <div class="navbar-brand-v5-icon-container" style="top: 4px; height: 45px; width: 45px; background: #f9f9f9; border-radius: 50%; border: 1px solid #000;">
-                            <img class="navbar-brand-v5-icon" style="margin-top: -2px;" src="{% static 'img/landing/arches_logo_dark.png' %}" alt="Arches Logo">
+                            <img class="navbar-brand-v5-icon" style="margin-top: -2px;" src="{% webpack_static 'img/landing/arches_logo_dark.png' %}" alt="Arches Logo">
                         </div>
                         <div class="application-name" style="position: absolute; top: 5px; left: 150px;">
                             <h2 style="color: #f4f4f4;">{% trans "Arches/DISCO" %}</h2>
@@ -155,7 +156,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <!-- SLIDE 1 -->
                     <li data-transition="fade" data-slotamount="9" data-masterspeed="0" data-title="Slide 1">
                         <!-- MAIN IMAGE -->
-                        <img src="{% static 'img/landing/irises.jpg' %}" alt="slidebg1" data-bgfit="cover" data-bgposition="center center" data-bgrepeat="no-repeat">
+                        <img src="{% webpack_static 'img/landing/irises.jpg' %}" alt="slidebg1" data-bgfit="cover" data-bgposition="center center" data-bgrepeat="no-repeat">
 
                         <!-- LAYERS -->
                         <!-- NEW LAYER -->
@@ -205,7 +206,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
             <!-- Content -->
             <div class="splash-img">
-                <img src="{% static 'img/landing/imac_designer.png' %}" alt="Arches Designer">
+                <img src="{% webpack_static 'img/landing/imac_designer.png' %}" alt="Arches Designer">
             </div>
 
             <!-- Sub-section -->
@@ -218,7 +219,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <p class="sub-block-description">
                             {% trans "Arches automatically creates data entry forms based on your data models.  Use Arches' Card Manager to configure the look and feel of your data entry UI." %}
                         </p>
-                        <img class="sub-block-image" src="{% static 'img/landing/card_manager.png' %}" alt="Card Manager">
+                        <img class="sub-block-image" src="{% webpack_static 'img/landing/card_manager.png' %}" alt="Card Manager">
                     </div>
                 </div>
 
@@ -229,7 +230,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <p class="sub-block-description">
                             {% trans "Use Arches' Permissions Manager to set up data access rules for all your user groups and individual accounts.  You can define read/write/delete and no-access permissions." %}
                         </p>
-                        <img class="sub-block-image" src="{% static 'img/landing/permissions_manager.png' %}" alt="Permissions Manager">
+                        <img class="sub-block-image" src="{% webpack_static 'img/landing/permissions_manager.png' %}" alt="Permissions Manager">
                     </div>
                 </div>
 
@@ -261,7 +262,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
             <!-- Content -->
             <div class="splash-img">
-                <img class="search-screen" src="{% static 'img/landing/consultation_workflow.jpg' %}" alt="Arches Workflows">
+                <img class="search-screen" src="{% webpack_static 'img/landing/consultation_workflow.jpg' %}" alt="Arches Workflows">
             </div>
 
         </div>
@@ -288,7 +289,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
             <!-- Content -->
             <div class="splash-img">
-                <img class="search-screen" src="{% static 'img/landing/arches_search.png' %}" alt="Arches Search">
+                <img class="search-screen" src="{% webpack_static 'img/landing/arches_search.png' %}" alt="Arches Search">
             </div>
 
             <!-- Sub-section -->
@@ -327,7 +328,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <!-- Content -->
             <div class="row">
                 <div class="col-md-6 col-lg-4">
-                    <img class="iphone" src="{% static 'img/landing/iPhone_8_map.png' %}" alt="Arches Designer">
+                    <img class="iphone" src="{% webpack_static 'img/landing/iPhone_8_map.png' %}" alt="Arches Designer">
                 </div>
                 <div class="col-md-6 col-lg-8">
                     <div class="mobile-description-container">
@@ -456,16 +457,16 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
     <script src="//cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.form/3.51/jquery.form.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.15.0/jquery.validate.min.js"></script>
-    <script src="{% static 'plugins/revolution-slider/rs-plugin/js/jquery.themepunch.tools.min.js' %}"></script>
-    <script src="{% static 'plugins/revolution-slider/rs-plugin/js/jquery.themepunch.revolution.min.js' %}"></script>
-    <script src="{% static 'plugins/cube-portfolio/cubeportfolio/js/jquery.cubeportfolio.min.js' %}"></script>
-    <script src="{% static 'plugins/one.app.js' %}"></script>
-    <script src="{% static 'plugins/pace-loader.js' %}"></script>
-    <script src="{% static 'plugins/owl-carousel.js' %}"></script>
-    <script src="{% static 'plugins/style-switcher.js' %}"></script>
-    <script src="{% static 'plugins/revolution-slider.js' %}"></script>
-    <script src="{% static 'plugins/cube-portfolio-lightbox.js' %}"></script>
-    <script src="{% static 'packages/knockout/build/output/knockout-latest.js' %}"></script>
+    <script src="{% webpack_static 'plugins/revolution-slider/rs-plugin/js/jquery.themepunch.tools.min.js' %}"></script>
+    <script src="{% webpack_static 'plugins/revolution-slider/rs-plugin/js/jquery.themepunch.revolution.min.js' %}"></script>
+    <script src="{% webpack_static 'plugins/cube-portfolio/cubeportfolio/js/jquery.cubeportfolio.min.js' %}"></script>
+    <script src="{% webpack_static 'plugins/one.app.js' %}"></script>
+    <script src="{% webpack_static 'plugins/pace-loader.js' %}"></script>
+    <script src="{% webpack_static 'plugins/owl-carousel.js' %}"></script>
+    <script src="{% webpack_static 'plugins/style-switcher.js' %}"></script>
+    <script src="{% webpack_static 'plugins/revolution-slider.js' %}"></script>
+    <script src="{% webpack_static 'plugins/cube-portfolio-lightbox.js' %}"></script>
+    <script src="{% webpack_static 'node_modules/knockout/build/output/knockout-latest.js' %}"></script>
 
 
     <script>
