Move urls to div to support webpack, re #1057

--- a/afs/templates/javascript.htm
+++ b/afs/templates/javascript.htm
@@ -22,15 +22,16 @@
 {% endblock shim %}
 
 
-{% block urls %}
-    physical_thing_search_results: "{% url 'physical-thing-search-results' %}",
-    physical_things_set: "{% url 'physical_things_set' %}",
-    upload_dataset_select_dataset_files_step: "{% url 'upload_dataset_select_dataset_files_step' %}",
-    upload_dataset_file_renderer: function (tileid) {
-        return "{% url 'upload_dataset_file_renderer' 'aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa' %}".replace('aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa', tileid)
-    },
-    format_render_map: function(format){return "{% url 'format_render_map' 'aaaaaaaa' %}".replace('aaaaaaaa', format)},
-{% endblock urls %}
+{% block arches_urls %}
+{{ block.super }}
+<div class="arches-urls"
+    physical_thing_search_results = "{% url 'physical-thing-search-results' %}"
+    physical_things_set = "{% url 'physical_things_set' %}"
+    upload_dataset_select_dataset_files_step = "{% url 'upload_dataset_select_dataset_files_step' %}"
+    upload_dataset_file_renderer = 'function (tileid) return "{% url 'upload_dataset_file_renderer' 'aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa' %}".replace('aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa', tileid)}''
+    format_render_map = "function(format){return "{% url 'format_render_map' 'aaaaaaaa' %}".replace('aaaaaaaa', format)}"
+></div>
+{% endblock arches_urls %}
 
 {% block project_modules %}
 <script>
