--- a/afs/templates/views/components/workflows/create-project-workflow/add-things-step.htm
+++ b/afs/templates/views/components/workflows/create-project-workflow/add-things-step.htm
@@ -16,9 +16,9 @@
                             <div class="search-result-item" data-bind="css: {'selected-instance': $parent.value().map(function(resource){return resource}).indexOf($data['_source']['resourceinstanceid']) >= 0},
                             click: function(){$parent.updateTileData($data['_source']['resourceinstanceid'])}">
                                 <div style="display: inline-flex;justify-content: space-between; align-items: baseline; width: 100%;">
-                                    <div class="summary-report-title" data-bind="text: $data._source.displayname"></div>
+                                    <div class="summary-report-title" data-bind="text: $parent.getStringValue($data._source.displayname)"></div>
                                 </div>
-                                <div class="summary-report-description" data-bind="html: $parent.stripTags($data._source.displaydescription) || 'No description'"></div>
+                                <div class="summary-report-description" data-bind="html: $parent.stripTags($parent.getStringValue($data._source.displaydescription)) || 'No description'"></div>
                             </div>
                         </div>
                     </div>
