Update annotation step for i18n, #1058

--- a/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-annotation-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-annotation-step.htm
@@ -159,8 +159,8 @@
                                             <!-- /ko -->
                                             <td class="afs-workflow-table-contents"
                                                 data-bind="text: (function(){
-                                                    var partIdentifierAssignmentLabelNodeId = '3e541cc6-859b-11ea-97eb-acde48001122';
-                                                    return $parent.getStrValue($data.data[partIdentifierAssignmentLabelNodeId])() + ' [Region of ' + $parent.physicalThingName() + ']';
+                                                    const partIdentifierAssignmentLabelNodeId = '3e541cc6-859b-11ea-97eb-acde48001122';
+                                                    return $parent.getStrValue($data.data[partIdentifierAssignmentLabelNodeId]) + ' [Region of ' + $parent.physicalThingName() + ']';
                                                 })()"
                                             ></td>
                                         </tr>
