--- a/afs/templates/javascript.htm
+++ b/afs/templates/javascript.htm
@@ -11,8 +11,8 @@
     physical_thing_search_results = "{% url 'physical-thing-search-results' %}"
     physical_things_set = "{% url 'physical_things_set' %}"
     upload_dataset_select_dataset_files_step = "{% url 'upload_dataset_select_dataset_files_step' %}"
-    upload_dataset_file_renderer = 'function (tileid) return "{% url 'upload_dataset_file_renderer' 'aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa' %}".replace('aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa', tileid)}''
-    format_render_map = "function(format){return "{% url 'format_render_map' 'aaaaaaaa' %}".replace('aaaaaaaa', format)}"
+    upload_dataset_file_renderer = '(tileid)=>{return "{% url "upload_dataset_file_renderer" "aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa" %}".replace("aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa", tileid)}',
+    format_render_map = '(format)=>{return "{% url "format_render_map" "aaaaaaaa" %}".replace("aaaaaaaa", format)}'
 ></div>
 {% endblock arches_urls %}
 
