Revert "Change final step to skip the parent thing, #1061"
This reverts commit d2fd616672fbe507670a470be3826f604fdf138f.

--- a/afs/templates/views/components/workflows/review-dataset/review-dataset-final-step.htm
+++ b/afs/templates/views/components/workflows/review-dataset/review-dataset-final-step.htm
@@ -19,6 +19,10 @@
         <div class="afs-final-step-block">
             <div style="display: flex; flex-direction: column;">
                 <div style="display: inline-flex;">
+                    <div class="summary-label" data-bind="text: reportVals.objectName.name + ':'"></div>
+                    <div class="summary-value" data-bind="text: reportVals.objectName.value"></div>
+                </div>
+                <div style="display: inline-flex;">
                     <div class="summary-label" data-bind="text: reportVals.sampledObjectName.name + ':'"></div>
                     <div class="summary-value" data-bind="text: reportVals.sampledObjectName.value"></div>
                 </div>
