--- a/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-image-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-image-step.htm
@@ -65,11 +65,12 @@
     class="btn btn-warning"
     style="
         position: fixed;
-        top: 4px;
-        left: calc(100vw - 450px);
+        top: 55px;
+        left: calc(100vw - 261px);
         height: 42px;
         width: 180px;
         transition: all linear .3s;
+        z-index: 1;
     "
     data-bind="
         style: {
