--- a/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-image-step.htm
+++ b/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-image-step.htm
@@ -63,11 +63,12 @@
     class="btn btn-warning"
     style="
         position: fixed;
-        top: 4px;
-        left: calc(100vw - 450px);
+        top: 53px;
+        right: 6px;
         height: 42px;
         width: 180px;
         transition: all linear .3s;
+        z-index: 1;
     "
     data-bind="
         style: {
