Add transaction id to manifest manager call, #973

--- a/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-image-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-image-step.htm
@@ -55,7 +55,8 @@
                 summary: true,
                 shouldShowEditService: $data.shouldShowEditService,
                 manifestData: manifestData,
-                renderContext: 'manifest-workflow'
+                renderContext: 'manifest-workflow',
+                transactionId: workflowId
             }
         }
     "
