--- a/afs/templates/views/components/workflows/select-phys-thing-step.htm
+++ b/afs/templates/views/components/workflows/select-phys-thing-step.htm
@@ -17,6 +17,9 @@
     <!--ko if: termFilter() -->
     <div style="padding: 5px; margin-top: 15px;">
         <div class="widget-input-label">
+            <span data-bind="if not: datasetRoute">
+                Select an Object
+            </span>
             <span data-bind="if: datasetRoute == 'non-destructive'">
                 Select an Object that has an Area of interest
             </span>
