makes save behavior more consistent

--- a/afs/templates/views/components/workflows/chemical-analysis-workflow/ca-upload-files-step.htm
+++ b/afs/templates/views/components/workflows/chemical-analysis-workflow/ca-upload-files-step.htm
@@ -16,7 +16,7 @@
     <div class="dataset-name" style="flex-grow: 1;">
         <label class="control-label">{% trans "Dataset Name" %}</label>
         <input type="text" class="form-control" style="width: 50%; height:initial"
-            data-bind="textInput: datasetName, event: { blur: datasetNameBlur }"></input>
+            data-bind="textInput: datasetName"></input>
         <div>
             <input class="afs-calculated-datasetname" disabled type="text" style="width: 50%;" data-bind="textInput: calcDatasetName"></input>
         </div>
