--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -726,8 +726,13 @@
 }
 
 .afs-image-service-list-item {
-    display: flex;
-    align-items: center;
+    display: inline-flex;
+    flex-direction: column;
+    align-items: baseline;
+    padding-left: 5px;
+}
+
+.afs-image-service-list-item .pad-lft {
     padding-left: 5px;
 }
 
