Update button text

--- a/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-image-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-image-step.htm
@@ -33,7 +33,7 @@
 <button class="btn btn-success" style="margin-left: 28px;" data-bind="click: openManifestManager, disable: $parent.locked">
     <i class="ion-android-cloud-done"></i>
     <span>
-        Select or Create Image Service
+        Add or Create New Image Service
     </span>
 </button>
 
