--- a/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-image-step.htm
+++ b/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-image-step.htm
@@ -31,7 +31,7 @@
 <button class="btn btn-success" style="margin-left: 28px;" data-bind="click: openManifestManager">
     <i class="ion-android-cloud-done"></i>
     <span>
-        Select or Create Image Service
+        Add or Create New Image Service
     </span>
 </button>
 
