--- a/afs/templates/views/components/workflows/chemical-analysis-workflow/ca-upload-files-step.htm
+++ b/afs/templates/views/components/workflows/chemical-analysis-workflow/ca-upload-files-step.htm
@@ -24,14 +24,15 @@
     </div>
 </div>
 
+<div class="uppy-progress" style="padding: 15px;"></div>
+
 <div class="file-chart-upload-panel" style="height: auto">
     
     <div class="gallery-controls new-tile no-background" style="height: 100%">
         <div data-bind="uppy: uppyOptions" style="height: 100%; width: 100%">
-           <div class="uppy-progress"></div>
         </div>
     </div>
-
+    
     <!-- ko if: files().length > 0 -->
     <div style="background-color: white; padding: 45px;">
      
