--- a/afs/templates/views/components/workflows/project-report-workflow/download-files.htm
+++ b/afs/templates/views/components/workflows/project-report-workflow/download-files.htm
@@ -23,7 +23,7 @@
     </div>
     <!-- /ko -->
     <button class="btn btn-danger" data-bind="{ click: downloadFiles }">
-        <span>Download</span>
+        <span data-bind="text: $root.translations.download"></span>
     </button>
     <div>
         <h4 data-bind="text: message"></h4>
