Respond to Cyrus' review, re Improve loading bar UI of the Chemical Analysis Data workflow #1145

--- a/afs/templates/views/components/workflows/chemical-analysis-workflow/ca-upload-files-step.htm
+++ b/afs/templates/views/components/workflows/chemical-analysis-workflow/ca-upload-files-step.htm
@@ -24,7 +24,7 @@
     </div>
 </div>
 
-<div class="uppy-progress" style="padding: 15px;"></div>
+<div class="uppy-progress"></div>
 
 <div class="file-chart-upload-panel" style="height: auto">
     
@@ -32,7 +32,7 @@
         <div data-bind="uppy: uppyOptions" style="height: 100%; width: 100%">
         </div>
     </div>
-    
+
     <!-- ko if: files().length > 0 -->
     <div style="background-color: white; padding: 45px;">
      
