--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -1041,6 +1041,10 @@
     height: 100%;
 }
 
+.uppy-progress {
+    padding: 15px;
+}
+
 .uppy-progress .uppy-Root .uppy .uppy-ProgressBar-inner {
     background-color: #2275d7;
     box-shadow: 0 0 10px #2275d7b3;
