--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -1038,3 +1038,53 @@
 .annotation-table .row{
     margin: 0;
 }
+
+.download-project-files-step .file-list-label {
+    font-size: 1.5rem;
+    margin-bottom: 20px;
+}
+
+.download-project-files-step .expand-select-button {
+    padding: 0.3rem 1rem;
+    font-size: 1rem;
+    background-color: #ebeef0;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.download-project-files-step .file-list-container {
+    padding-bottom: 10px;
+}
+
+.download-project-files-step .file-download-button {
+    display: inline-flex;
+    padding-bottom: 20px;
+}
+
+.download-project-files-step .expand-select-buttons {
+    margin-bottom: 20px;
+}
+
+.download-project-files-step .file-download-list {
+    display: flex;
+    padding-left: 10px;
+}
+
+.download-project-files-step .file-download-list a {
+    color: steelblue;
+}
+
+.download-project-files-step .file-download-list input {
+    margin-right: 10px;
+}
+
+.download-project-files-step .physical-thing-list {
+    display: felx;
+    font-size: 1.5rem;
+    padding: 10px 10px;
+    cursor: pointer;
+}
+
+.download-project-files-step .file-listing-text {
+    padding-left: 20px;
+}
