Change color of return to workflow button, re #1148

--- a/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-image-step.htm
+++ b/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-image-step.htm
@@ -68,7 +68,7 @@
         transform: !isManifestManagerHidden() ? 'translate(0,0)' : 'translate(0,-100vh)'
     }">
     <button
-        class="btn btn-warning return-to-workflow-button"
+        class="btn btn-labeled btn-primary return-to-workflow-button"
         data-bind="
             style: {
                 transform: !isManifestManagerHidden() ? 'translate(0,0)' : 'translate(0,-100vh)'
