--- a/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-image-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-image-step.htm
@@ -70,7 +70,7 @@
         transform: !isManifestManagerHidden() ? 'translate(0,0)' : 'translate(0,-100vh)'
     }">
     <button
-        class="btn btn-warning return-to-workflow-button"
+        class="btn btn-labeled btn-primary return-to-workflow-button"
         data-bind="
             style: {
                 transform: !isManifestManagerHidden() ? 'translate(0,0)' : 'translate(0,-100vh)'
